# k-1

./: .coverage  .env.example  .gitignore  0.7.py  2.1.txt  2.txt  3.txt  4.txt  Appendix B.py  F.py  Gravity as.txt  Jmax.py  K1FIXED.py  K1HP.py  K=1 Chronogeometrodynamics.txt  K=1 Tolman.txt  K=1 quantum.py  K=1 quantum.txt  K=1 中文图表.txt  K=1 英文图表.txt  K=1 路径b 降级.txt  README.md  Rayeigh.py  Rayleigh.py  Realizability 2.txt  Realizability 3.txt  Realizability 4.txt  Realizability and the Origin of Causality.txt  Realizability phys .txt  Realizability phys2.txt  Realizability.txt  SCI ↔ DAG-UTH v3.py  SCI→0.py  UNI-5.py  UTH.py  baby_talk_full_test.py  cli.py  core.py  cost.txt  examples.py  (+30 more)
codex_connector/: __init__.py  api_client.py  config.py  core.py  utils.py
docs/: README.md  audit-corr.js  audit.js  bench.js  birkhoff.js  core_README.md  extremal.js  index.html  law3-audit.js  paper-fixes.v2.js  paper.html  proofmap.js  reverse.js  sds.js  sigform.js
docs/deploy/: audit-corr.js  bench.js  birkhoff.js  extremal.js  kkernel.js  law3-audit.js  paper.html  proofmap.js  reverse.js  sds.js  sigform.js
examples/: attention_example.py  full_model_example.py  norm_example.py  online_interaction_test.py  quick_example.py
experiments/: __init__.py  baby_talk_full_test.py  core.py  law2_necessity_test.py  layer1_minimal_test.py  layer3_zero_loss_B.py  llcm_first_principles.py  lorentz_riemannian_transformer.py  online_interaction_test.py
llcm/: __init__.py  core.py
lorentz_transformer/: __init__.py
lorentz_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lorentz_transformer/core/: README.md  __init__.py  attention.py  layer_norm.py  minkowski_norm.py
tests/: __init__.py  test_attention.py  test_attention_extended.py  test_integration.py  test_integration_extended.py  test_llcm_core.py  test_minkowski_norm.py  test_minkowski_norm_extended.py  test_online_interaction.py
