[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorentz-transformer"
version = "1.1.0"
description = "Minkowski Geometry in Transformer Attention"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "papasop" }]
keywords = ["lorentz", "transformer", "minkowski", "attention", "physics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=22.0", "flake8>=4.0"]

[project.urls]
Homepage = "https://github.com/papasop/k-1"

[tool.setuptools.packages.find]
include = ["lorentz_transformer*"]

[tool.coverage.run]
source = ["lorentz_transformer"]

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__"',
    "pragma: no cover",
]
