[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-1"
version = "2.0.0"
description = "K=1 Chronogeometrodynamics — LLCM Research Prototype"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "papasop" }]
keywords = ["lorentz", "transformer", "minkowski", "attention", "physics", "llcm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=22.0", "flake8>=4.0"]

[project.urls]
Homepage = "https://github.com/papasop/k-1"

[tool.setuptools.packages.find]
include = ["llcm*", "experiments*"]

[tool.coverage.run]
source = ["llcm", "experiments"]

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__"',
    "pragma: no cover",
]
